# nvs

./: .gitignore  CMakeLists.txt  Findnvs.cmake  README.md
from_svn/: NMEAParser.cpp  NMEAParser.h  NMEAStructures.h
include/: nvs.h
include/nvs/: nvs.h  nvs_structures.h
src/: main.cc  main.cpp  nvs.cpp
src/nvs/: main.cc  nvs.cpp
udev/: 10_nv08c_csm.rules
